Swapped left to right, as other similar new services are similarly aligned. Some issues might still be present.

--- a/ckanext/kata/public/css/kata.css
+++ b/ckanext/kata/public/css/kata.css
@@ -278,16 +278,16 @@ header.masthead .not-authed a {
 	background: none !important;
 }
 [role="main"] .primary {
-	float: left;
+	/*float: left;
 	margin-right: 0px !important;
 	width: 700px;
-	margin-right: auto;
+	margin-right: auto;*/
 }
 [role="main"] .secondary {
-	float: right;
+	/*float: right;
 	margin-left: auto;
 	width: 220px;
-	margin-right: 0px;
+	margin-right: 0px;*/
 }
 .box {
 	border: 0px !important;
